# daisykit

./: .clang-format  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CMakeCache.txt  CMakeLists.txt  LICENSE  MANIFEST.in  MODELS.md  Makefile  README.md  TODO.md  cmake_install.cmake  conftest.py  pyproject.toml  setup.py
.github/workflows/: clang-format-check.yml  docs.yml  publish-docs.yml  wheels-linux.yml  wheels-macos.yml  wheels-macos_m1.yml  wheels-source.yml  wheels-windows.yml  wheels.yml
ai_models/: action_classifier.cpp  body_detector.cpp  pose_detector.cpp  pose_detector_blazepose.cpp  pose_detector_blazepose.h
analyzers/: pushup_analyzer.cpp  pushup_analyzer.h
bin_ncnn/: Makefile  cmake_install.cmake
bin_ncnn/src/: Makefile  cmake_install.cmake  layer_declaration.h  layer_registry.h  layer_shader_registry.h  layer_shader_spv_data.h  platform.h
build_tools/: build_windows.bat
build_tools/github/: build_minimal_windows_image.sh  build_source.sh  build_wheels.sh  check_build_trigger.sh  install_cv4.sh  repair_windows_wheels.sh  test_source.sh  test_wheels.sh  test_windows_wheels.sh
build_tools/py_macos/: build_dk_all_pythons.sh  create_build_envs.sh
build_tools/py_macos_local/: build_dk_all_pythons.sh
build_tools/py_macos_m1/: build_dk_all_pythons.sh  create_build_envs.sh
build_tools/py_windows/: build_dk_all_pythons_windows.sh  create_build_envs_windows.sh
build_tools/py_windows_local/: build_dk_python_source_dist.sh  create_build_envs_windows.sh
common/: types.h
configs/: background_matting_config.json  face_detector_config.json  hand_pose_yolox_mp_config.json  human_pose_movenet_config.json  object_detector_yolox_config.json  pushup_counter_config.json
data/configs/: barcode_scanner_config.json  base_flow_config.json  face_detector_config.json  face_detector_with_mask_config.json  pushup_counter_config.json
data/models/: action_classifier.param  pose_landmark_lite.param
docs/: Doxyfile.in  android.md  contribution.md  index.md  mainpage.md  models.md  pipy-doc.md  python.md  requirements-docs.txt  requirements-readthedocs.txt  sdk.md
docs/doxygen-awesome-css/: .gitignore  Doxyfile  LICENSE  README.md  doxygen-awesome-sidebar-only.css  doxygen-awesome.css
docs/doxygen-awesome-css/docs/: page.dox
docs/doxygen-custom/: custom.css
docs/en/: android.md  conf.py  contribution.md  index.rst  models.md
docs/en/cpp/: background_matting.md  barcode.md  cpp.md  face_detection.md  hand_pose.md  human_pose.md  object_detection.md
docs/en/python/: background_matting.md  face_detection.md  human_pose.md  object_detection.md  python.md
docs/python/: barcode.md  face_detection.md  hand_pose.md  index.md
docs_sphinx/: Doxyfile.in  README.md  conf.py  index.rst
docs_sphinx/api/: graphs.rst  index.rst
examples/: demo_blazepose.cpp  demo_pushup_classifier.cpp  demo_pushup_full.cpp
include/daisykit/: README.md
include/daisykit/common/: profiler.h  types.h
include/daisykit/flows/: background_matting_flow.h  barcode_scanner_flow.h  face_detector_flow.h  hand_pose_detector_flow.h  human_pose_movenet_flow.h  object_detector_flow.h  pushup_counter_flow.h
include/daisykit/models/: action_classifier.h  background_matting.h  background_matting_pp.h  body_detector.h  face_anti_spoofing.h  face_detector.h  face_liveness_detector.h  facial_landmark_detector.h  hand_detector_yolox.h  hand_pose_detector.h  image_model.h  liveness_detection.h  (+6 more)
include/daisykitsdk/: README.md
logging/: mjpeg_writer.cpp  mjpeg_writer.h
models/face_detection_scrfd/: scrfd_2.5g_1.param
models/face_extraction/: iresnet18_1.param
models/hand_pose/: hand_full-op.param  hand_lite-op.param  human_pose_movenet_config.json  yolox_hand_relu.param  yolox_hand_swish.param
python/: CMakeLists.txt  README.md  requirements.txt  setup.py  setup.py.i
python/daisykit/: __init__.py
python/daisykit/utils/: __init__.py  asset_store.py  conversion.py  download.py  generate_file_list.py  objects.py
python/examples/: background_matting.py  barcode_scanner.py  face_detection.py  hand_pose_detection.py  human_pose_detection.py  object_detection.py
python/src/: main.cpp
scripts/: build_dk_all_pythons_windows.sh  build_python.sh  build_windows.bat  format_code.sh  upload_pypi.sh
signalproc/: signal_processor.cpp  signal_processor.h
src/common/: profiler.cpp
src/examples/: CMakeCache.txt  CMakeLists.txt  Makefile  barcode_scanner.cpp  cmake_install.cmake  demo_background_matting.cpp  demo_barcode_scanner.cpp  demo_blazepose.cpp  demo_face_antispoofing.cpp  demo_face_detector.cpp  demo_face_detector_graph.cpp  demo_face_detector_retina.cpp  demo_face_detector_scrfd.cpp  demo_face_detector_with_landmark.cpp  demo_face_detector_with_mask.cpp  demo_face_liveness_detection.cpp  demo_face_sequential.cpp  demo_graph_api.cpp  demo_hand_detector_yolox.cpp  demo_hand_pose_detector.cpp  demo_human_matting.cpp  demo_movenet.cpp  demo_object_detector_yolox.cpp  demo_pushup_classifier.cpp  demo_pushup_full.cpp
src/examples/fitness/: demo_pushup_classifier.cpp  demo_pushup_full.cpp  pushup_analyzer.cpp
src/examples/pushups/: pushup_analyzer.cpp
src/flows/: background_matting_flow.cpp  barcode_scanner_flow.cpp  face_detector_flow.cpp  face_detector_with_mask_flow.cpp  hand_pose_detector_flow.cpp  human_matting_flow.cpp  human_pose_movenet_flow.cpp  object_detector_flow.cpp  pushup_counter_flow.cpp
src/models/: action_classifier.cpp  background_matting.cpp  background_matting_pp.cpp  base_model-impl.cpp  base_model.cpp  body_detector.cpp  face_alignment.cpp  face_anti_spoofing.cpp  face_detector.cpp  face_detector_scrfd.cpp  face_detector_with_mask.cpp  face_extractor.cpp  face_liveness_detector.cpp  facial_landmark_detector.cpp  facial_landmark_estimator.cpp  hand_detector_yolox.cpp  hand_pose_detector.cpp  human_matting.cpp  image_model.cpp  liveness_detector.cpp  ncnn_model.cpp  object_detector_nanodet.cpp  object_detector_yolox.cpp  pose_detector.cpp  pose_detector_blazepose.cpp  pose_detector_movenet.cpp  yolox_utils.cpp
visualizer/: viz_utils.h
(+453 files in other folders)
